--- a/css/templatemo-medic-care.css
+++ b/css/templatemo-medic-care.css
@@ -1,11 +1,3 @@
-/*
-
-TemplateMo 566 Medic Care
-
-https://templatemo.com/tm-566-medic-care
-
-*/
-
 /*---------------------------------------
   CUSTOM PROPERTIES ( VARIABLES )             
 -----------------------------------------*/
@@ -42,9 +34,6 @@ body {
     position: relative;
     padding-top: 94px;
 }
-
-
-
 
 .form-setup {
   display: block;
@@ -925,8 +914,10 @@ strong {
   }
 
   .heroText {
+    background-color: #FFF;
+    box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.1);
     position: relative;
-    bottom: 100px;
+    margin-top: 55%;
     left: 0;
     width: auto;
     margin-bottom: -100px;
@@ -941,10 +932,10 @@ strong {
 
 @media screen and (max-width: 767px) {
   .heroText {
-    background-color: #ebebe8;
+    background-color: #FFF;
+    box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.1);
     padding: 2rem;
     margin-top: 55%;
-
   }
 
   .animated-info {
