--- a/css/templatemo-medic-care.css
+++ b/css/templatemo-medic-care.css
@@ -74,7 +74,7 @@ body {
   border-radius: 30px;
 }
 
-.gallery {
+.disclaimer {
   background-color: #ebebe8;
   padding-top: 3rem;
   padding-bottom: 2rem;
@@ -89,7 +89,7 @@ body {
   position: absolute;
   padding-right: 10px;
   left: 0;
-  height: 870px;
+  height: 820px;
   width: 600px;
 }
 
@@ -321,7 +321,7 @@ strong {
 -----------------------------------------*/
 .hero {  
   padding-top: 0rem;
-  background: url(../images/hero.png) no-repeat center center;
+  background: url(../images/banner.png) no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -339,10 +339,11 @@ strong {
 
 .heroText {
   position: absolute;
+  text-shadow: 1px 0px 2px rgba(0,0,0,0.5);
   z-index: 2;
   bottom: 50%;
   left: 0;
-  width: 40%;
+  width: 42%;
 }
 
 .contact-phone {
@@ -914,8 +915,9 @@ strong {
   }
 
   .heroText {
-    background-color: #FFF;
-    box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.1);
+/*     background-color: #FFF;
+    box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.1); */
+    text-shadow: 1px 0px 2px rgba(0,0,0,0.5);
     position: relative;
     margin-top: 55%;
     left: 0;
@@ -932,8 +934,9 @@ strong {
 
 @media screen and (max-width: 767px) {
   .heroText {
-    background-color: #FFF;
-    box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.1);
+/*     background-color: #FFF;
+    box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.1); */
+    text-shadow: 1px 0px 2px rgba(0,0,0,0.5);
     padding: 2rem;
     margin-top: 55%;
   }
